refactor for deployment